# example_ink

interfaces/: Cargo.toml  lib.rs
interfaces/istorage/: Cargo.toml
mock_storage/mock_a/: Cargo.toml  lib.rs
mock_storage/mock_b/: Cargo.toml  lib.rs
storage/: Cargo.toml  lib.rs
user/: Cargo.toml  lib.rs
