[package]
name = "user"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
interfaces = { path = "../interfaces", default-features = false, features = ["ink-as-dependency"] }
mock_a = { path = "../mock_storage/mock_a", default-features = false, features = ["ink-as-dependency"] }
mock_b = { path = "../mock_storage/mock_b", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "interfaces/std",
    "mock_a/std"
]
ink-as-dependency = []
e2e-tests = []
